v0.10
 - Fixed bugs: #16

v0.09
 - Persisting chat roster.
 - Persisting black list roster in ./data directory. Not using config file anymore
 - By default, when chatbot is connected all contacts are unchecked in the roster
 - Added order "chatbot save" and "chatbot discard" to tell the chabot to persist
   or discard a chat conversation.
 - Bug fixed: #15 

v0.08
 - Implemented rules with 'targets' (i.e. rules that only applies if a given
   username matches)
 - Added a chabot id to each chatbot file.
 - Saving chat history indexed by the chatbot id
 - Saving all logs files in a configurable directory (By default ./logs)
 - Implemented "listening" mode for Facebook chatbots
 - Saving chat corpus and chat history with format CSV instead of custom format
 - Implemented operators +, * and **
 - Added welcome screen
 - Chat account fixed in creation time to a chatbot rule file

v0.07
 - Implemented "Save as", "Open", "New"
 - Implemented import and export
 - Added list (roster) to select which users the chatbot can talk to
 - Saving user preferences. So far: window size, window position, last 
   chat username, checked/unchecked users in roster and last opened file

v0.06
 - Logging test conversations in test_conversations.log
 - Added menu bar with menus "About", "Save" and "Exit"
 - Added "About" window

v0.05
 - Added application icon
 - Bug fixed: #8, #10

v0.04
 - Implemented variables and single if-else conditionals
 - Added "Undo rule" and "Teach rule" buttons
 - Asking to save changes only if there are changes
 - Implemented input sanitizer
 - Bugs fixed: #4, #5

v0.03
 - Added QXmpp and ProgramQ as third-party dependencies
 - Implemented AIML engine and integrated in UI
 - Implemented connection to Facebook and GTalk chat servers and integrated in UI
 - Basic implementation of conversation history
 - Basic implementation to save rules and categories
 - Bugs fixed: #1, #2, #3

v0.02
 - Second UI design
 - Buttons to add/remove/edit rules working